--- a/env.sample
+++ b/env.sample
@@ -3,7 +3,7 @@
 PORT=
 
 # Copy your GraphCMS endpoint which can be found on your
-# GraphCMS dashboard, Project Settings > Endpoints
+# GraphCMS dashboard, Project Settings > Endpoints (High Performance Content API)
 NEXT_PUBLIC_GRAPHCMS_ENDPOINT=
 
 # Copy your GraphCMS Token
