--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
     "jsx": "preserve",
     "incremental": true,
     "typeRoots": ["./node_modules/@types", "./.next/types"],
+    "types": ["node"],
     "plugins": [
       {
         "name": "next"
